Add timeouts and readme
